apps/shared/appflowy/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appflowy-ingress
  namespace: appflowy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/middleware: "appflowy-forward-auth@kubernetescrd"
spec:
  rules:
  - host: appflowy.${DOMAIN_BASE}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appflowy-service
            port:
              number: 3000
